# nautobot-plugin-ssot-citrix-adm

./: .cookiecutter.json  CHANGELOG.md  GETTING_STARTED.md  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  upstream.yml
development/: Dockerfile  development.env  docker-compose.base.yml  docker-compose.dev.yml  nautobot_config.py  towncrier_template.j2
docs/admin/: install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: version_1.0.md
docs/dev/: dev_environment.md
docs/dev/code_reference/: api.md  package.md
nautobot_ssot_citrix_adm/: __init__.py  jobs.py  signals.py
nautobot_ssot_citrix_adm/api/: __init__.py
nautobot_ssot_citrix_adm/diffsync/adapters/: citrix_adm.py  nautobot.py
nautobot_ssot_citrix_adm/diffsync/models/: base.py  citrix_adm.py  nautobot.py
nautobot_ssot_citrix_adm/tests/: __init__.py  fixtures.py  test_adapters_citrix_adm.py  test_adapters_nautobot.py  test_api.py  test_basic.py  test_citrix_adm_adapter.py  test_models_nautobot.py  test_utils_citrix_adm.py  test_utils_nautobot.py  tests_models_nautobot.py
nautobot_ssot_citrix_adm/tests/fixtures/: get_devices.json  get_devices_recv.json  get_devices_sent.json  get_ports.json  get_ports_recv.json  get_vlan_bindings_recv.json  get_vlan_bindings_sent.json
nautobot_ssot_citrix_adm/utils/: citrix_adm.py  nautobot.py
